--- a/Java5_ASM_FULL/src/main/resources/templates/items/index.html
+++ b/Java5_ASM_FULL/src/main/resources/templates/items/index.html
@@ -98,9 +98,31 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" th:href="@{/account/login}">Đăng Nhập</a></li>
-            <li class="nav-item"><a class="nav-link" th:href="@{/cart/view}">Giỏ Hàng</a></li>
-            <li class="nav-item"><a class="nav-link" th:href="@{/items/index}">Danh Sách Mặt Hàng</a></li>
+            <!-- Hiển thị "Đăng Nhập" chỉ khi KHÔNG có session manguoidung -->
+            <li class="nav-item" th:unless="${session.manguoidung != null}">
+                <a class="nav-link" th:href="@{/account/login}">
+                    <i class="fas fa-sign-in-alt"></i> Đăng Nhập
+                </a>
+            </li>
+
+            <!-- Hiển thị "Đăng Xuất" chỉ khi CÓ session manguoidung -->
+            <li class="nav-item" th:if="${session.manguoidung != null}">
+                <a class="nav-link" th:href="@{/account/logout}">
+                    <i class="fas fa-sign-out-alt"></i> Đăng Xuất
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/cart/view}">
+                    <i class="fas fa-shopping-cart"></i> Giỏ Hàng
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/items/index}">
+                    <i class="fas fa-list"></i> Danh Sách Mặt Hàng
+                </a>
+            </li>
         </ul>
     </div>
 </nav>
